# IEEE2017

./: LICENSE  README.md  install.sh  readme.md
ieee2017_arduino_connector/: CMakeLists.txt  package.xml
ieee2017_arduino_connector/launch/: master.launch
ieee2017_arduino_connector/nodes/: communication_manager.py
ieee2017_command/: CMakeLists.txt  package.xml
ieee2017_command/launch/: master.launch
ieee2017_command/nodes/: communication_manager.py
ieee2017_command/scripts/: communication_manager.py
ieee2017_controller/: CMakeLists.txt  package.xml  readme.md
ieee2017_msgs/: CMakeLists.txt  package.xml
ieee2017_msgs/msg/: ShooterControl.msg
ieee2017_navigation/: CMakeLists.txt  package.xml  readme.md
ieee2017_navigation/launch/: lidar.launch
ieee2017_navigation/nodes/: lidar_fuser.py
ieee2017_perception/: CMakeLists.txt  package.xml
ieee2017_perception/launch/: camera_startup.launch
ieee2017_perception/nodes/: shooter_camera.py  visual_servo.py
ieee2017_perception/scripts/: visual_servo.py
ieee2017_tf_broadcaster/: CMakeLists.txt  package.xml
ieee2017_tf_broadcaster/launch/: tf_broadcaster.launch
ieee2017_tf_broadcaster/nodes/: tf_broadcaster.py
ieee2017_vision/: CMakeLists.txt  package.xml
ieee2017_vision/launch/: camera_startup.launch  vision.launch
ieee2017_vision/nodes/: shooter_camera.py  visual_servo.py
ieee2017_vision/scripts/: shooter_camera.py
udev/: readme.md  setup.sh
