<?xml version="1.0"?>
<package>
  <name>ieee2017_controller</name>
  <version>0.0.0</version>
  <description>The ieee2017_controller package</description>

  <maintainer email="anthony@iris-systems.net">Anthony Olive</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
