<?xml version="1.0"?>
<package>
  <name>ieee2017_navigation</name>
  <version>0.0.0</version>
  <description>The ieee2017_navigation package</description>

  <maintainer email="anthony@iris-systems.net">Anthony Olive</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hokuyo_node</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
