<?xml version="1.0"?>
<package>
  <name>ieee2017_tf_broadcaster</name>
  <version>0.0.0</version>
  <description>The ieee2017_tf_broadcaster package</description>

  <maintainer email="anthony@iris-systems.net">Anthony Olive</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
</package>
